# dockerized-apis

./: README.md
cpp/: CMakeLists.txt  Dockerfile  README.md  main.cpp
go/: Dockerfile  README.md  main.go
php/: Dockerfile  README.md  api.php  composer.json
rust/: Cargo.toml  Dockerfile  README.md
rust/src/: main.rs
typescript/: Dockerfile  README.md  api.ts  package.json  tsconfig.json
